as much as i can do in 8 hours

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-angular": "^4.1.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "prettier": "^2.7.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
